@@ -1,3 +1,8 @@
+Tue Jun  8 15:45:52 2010  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/imap (encode_utf7): encode & properly.  Thanks, Kengo
+	  Matsuyama.  [ruby-dev:38063]  backported from trunk.
+
 Tue Jun  8 15:43:43 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>
 
 	* ext/win32ole/win32ole.c (ole_val2variant): fix the core dump
